# lab_ia

./: README.md  rp-es6_Exercise1.ipynb  rp-es6_Exercise2.ipynb  rp-es6_Exercise3.ipynb  rp-es8.ipynb
esercitazione1-22-23/: test0
progetto_lampioni/: CMakeLists.txt  confronto.py  fede_filtro1.py  fede_filtro2.py  filtro1.py  filtro2.py  filtro_lampioni.py  main.cpp  main.py  metrica_fede.py  panda.py  prova.py  prova_1.py  stat.py  stuff.txt  test.py
progetto_lampioni/data/: CMakeCache.txt
progetto_lampioni/lampioni_foto_prof.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
progetto_lampioni/roboflow/: README.dataset.txt  README.roboflow.txt  data.yaml
progetto_lampioni/roboflow/test/labels/: immagine_lab_ia-1-_jpg.rf.bbe7082e00bc3ec42ff243f08fd0349b.txt  immagine_lab_ia-10-_jpg.rf.7139426637b014084a994c181173c773.txt  immagine_lab_ia-11-_jpg.rf.1a5dea0c66e06da0b092d79309fbdb10.txt  immagine_lab_ia-12-_jpg.rf.5e1ccebb7aea925338a9418ce2a2f7a2.txt  immagine_lab_ia-13-_jpg.rf.a71aa19fccbe5fccf9c373d4b6965d7d.txt  immagine_lab_ia-14-_jpg.rf.fefb75cb991f3c6769b99e4f7682121f.txt  immagine_lab_ia-15-_jpg.rf.c01e3e5045dbd027ba893e3b5083613b.txt  immagine_lab_ia-16-_jpg.rf.624cc159a97e22809a798943cdfc81a6.txt  immagine_lab_ia-17-_jpg.rf.4224789dd1053ccdfaf9d3b45dcc0599.txt  immagine_lab_ia-18-_jpg.rf.559a5cc4cc452dca486070fc2eb0a894.txt  immagine_lab_ia-19-_jpg.rf.804094af13bc9c416d799de0616f6520.txt  immagine_lab_ia-20-_jpg.rf.46622af3a6ad3f8fc7373bfc9430f779.txt  immagine_lab_ia-21-_jpg.rf.0693ad7538281a2136834e3442fb9940.txt  (+10 more)
rp-es1/: CMakeLists.txt  (+2 more)
(+25 files in other folders)
